packages/scrabble-solver/src/components/Board/Board.module.scss
@import 'styles/animations';
@import 'styles/mixins';

.board {
  display: grid;
  gap: var(--border--width);
  box-shadow: var(--box-shadow);
  background-color: white;
  border: var(--border);
  border-radius: var(--border--radius);
}

.image {
  position: absolute;
  inset: var(--border--width);
  border-radius: inherit;
}

.floating {
  position: absolute;
  z-index: var(--z-index--actions);
  width: max-content;
  height: max-content;
  animation: var(--transition--duration) var(--transition--easing) show;
}

.focus {
  @include focus-effect;

  cursor: text;

  &::after {
    content: '';
    box-shadow: 0 0 0 var(--focus-effect--size) var(--color--focus);
  }
}

.hidden {
  pointer-events: none;
  user-select: none;
  animation: var(--transition--duration) var(--transition--easing) hide;
}

.iconContainer {
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  pointer-events: none;
  user-select: none;
}

.iconBackground,
.icon {
  position: absolute;
  inset: calc((100% - var(--size)) / 2);
  width: var(--size);
  height: var(--size);
}

.iconBackground {
  --size: 80%;

  border-radius: var(--border--radius);
  background-color: var(--color--foreground--secondary);
}

.icon {
  --size: 40%;

  color: var(--color--white);
}

.coordinateColumn {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: var(--font--size--h2);
}

.coordinateRow {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: var(--font--size--h2);
}

